# startermod_items

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure.cmd  manifest.json  radsub.py
source/: CMakeLists.txt  RadiantPackageList.txt  package.py  stage.cmd
source/chromium/: CMakeLists.txt  cef_headers.h  chromium.h  namespace.h
source/client/: CMakeLists.txt  application.cpp  application.h  client.cpp  client.h  clock.cpp  clock.h  deferred.cpp  deferred.h  deferred_response.h  entity_traces.cpp  entity_traces.h  input_event.h  lua_deferred.h  main.cpp  mouse_event_promise.cpp  mouse_event_promise.h  namespace.h  pch.h  rest_api.cpp  rest_api.h  trace_object_deferred.cpp  trace_object_deferred.h  xz_region_selector.cpp  xz_region_selector.h
source/client_app/: CMakeLists.txt  main_win32.cpp
source/client_dll/: CMakeLists.txt  dllmain.cpp
source/core/: CMakeLists.txt  assert.cpp  buffered_slot.h  config.cpp  config.h  deferred.cpp  deferred.h  double_buffer.h  guard.cpp  guard.h  input.h  ipromise.h  log.cpp  log_internal.h  log_win32.cpp  namespace.h  object_counter.cpp  object_counter.h  process.cpp  process.h  profiler.cpp  profiler.h  radiant_json.cpp  shared_resource.h  singleton.h  slot.h  static_string.cpp  static_string.h  system.cpp  system.h  thread.cpp  thread.h  unique_resource.h
source/csg/: CMakeLists.txt  array_2d.h  color.cpp  color.h  csg.cpp  csg.h  csg_json.h  cube.cpp  cube.h  edge_tools.h  heightmap.cpp  heightmap.h  iterators.cpp  iterators.h  matrix.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  meshtools.cpp  meshtools.h  namespace.h  pch.h  point.cpp  point.h  quaternion.cpp  quaternion.h  random_number_generator.cpp  random_number_generator.h  ray.cpp  ray.h  region.cpp  region.h  region_tools.cpp  region_tools.h  region_tools_traits.h  rotate_shape.h  sphere.cpp  sphere.h  transform.cpp  (+8 more)
source/dm/: CMakeLists.txt  all_objects_types.h  alloc_trace.cpp  alloc_trace.h  array.cpp  array.h  array_loader.h  array_trace.cpp  array_trace.h  array_trace_buffered.cpp  array_trace_buffered.h  array_trace_sync.cpp  array_trace_sync.h  boxed.cpp  boxed.h  boxed_loader.h  boxed_trace.cpp  boxed_trace.h  boxed_trace_buffered.cpp  boxed_trace_buffered.h  boxed_trace_sync.cpp  boxed_trace_sync.h  dbg_indenter.cpp  dbg_indenter.h  dbg_info.cpp  dbg_info.h  dm.h  dm_log.h  dm_save_impl.h  formatter.h  forward_defines.h  guard.cpp  guard.h  guard_set.cpp  guard_set.h  lua_types.h  map.cpp  map.h  map_iterator.cpp  map_iterator.h  (+72 more)
source/game_engine/: CMakeLists.txt  arbiter.cpp  arbiter.h  client.cpp  client.h
source/horde3d/: CMakeLists.txt
source/httpd/: CMakeLists.txt  mongoose.c  mongoose.h  namespace.h  server.cpp  server.h
source/include/: bitvector.h  build_defaults.h  build_number.h  game_engine.h  math3d.h  math3d_collision.h  metrics.h  protocol.h  radiant.h  radiant_assert.h  radiant_exceptions.h  radiant_file.h  radiant_json.h  radiant_log_categories.h  radiant_logger.h  radiant_luabind.h  radiant_macros.h  radiant_net.h  radiant_stdutil.h  radiant_types.h  radiant_win32.h  render3d.h  simulation.h
source/lib/: CMakeLists.txt  namespace.h
source/lua/: CMakeLists.txt  forward_defines.h  namespace.h  pch.h  radiant_lua.cpp  radiant_lua.h  register.cpp  register.h  script_host.cpp  script_host.h
source/math3d/: CMakeLists.txt
source/metrics/: CMakeLists.txt  profile.cpp  profile.h  store.cpp  store.h
source/om/: CMakeLists.txt  all_component_defs.h  all_components.h  all_object_defs.h  all_object_types.h  all_objects.h  data_binding.cpp  data_binding.h  data_blob.cpp  data_blob.h  entity.cpp  entity.h  json.h  json_store.cpp  json_store.h  macros.h  namespace.h  object_enums.h  om.h  om_alloc.cpp  om_alloc.h  pch.h  region.cpp  region.h  selection.cpp  selection.h  stonehearth.cpp  stonehearth.h  tiled_region.cpp  tiled_region.h  trace_categoies.h
source/physics/: CMakeLists.txt  collision_tracker.cpp  collision_tracker.h  derived_region_tracker.cpp  derived_region_tracker.h  destination_region_tracker.cpp  destination_region_tracker.h  destination_tracker.cpp  destination_tracker.h  free_motion.cpp  free_motion.h  mob_tracker.cpp  mob_tracker.h  movement_guard_shape_tracker.cpp  movement_guard_shape_tracker.h  movement_modifier_shape_tracker.cpp  movement_modifier_shape_tracker.h  namespace.h  nav_grid.cpp  nav_grid.h  nav_grid_tile.cpp  nav_grid_tile.h  nav_grid_tile_data.cpp  nav_grid_tile_data.h  octtree.cpp  octtree.h  physics_util.cpp  physics_util.h  region_collision_shape_tracker.cpp  region_collision_shape_tracker.h  region_tracker.cpp  region_tracker.h  sensor_tile_tracker.cpp  sensor_tile_tracker.h  sensor_tracker.cpp  sensor_tracker.h  terrain_tile_tracker.cpp  terrain_tile_tracker.h  terrain_tracker.cpp  terrain_tracker.h  (+6 more)
source/platform/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  FileWatcherImpl.h  StackWalker.cpp  backtrace.cpp  backtrace.h  namespace.h  random.h  sysinfo.cpp  sysinfo.h  thread.h  thread_pool.cpp  thread_pool.h  utils.h  worker_thread.cpp  worker_thread.h
source/protocols/: CMakeLists.txt  forward_defines.h  protocol.cpp  radiant.proto  store.proto  tesseract.proto  world.proto
source/resources/: CMakeLists.txt  action.cpp  action.h  animation.cpp  animation.h  array_resource.cpp  array_resource.h  data_resource.cpp  data_resource.h  directory_module.cpp  directory_module.h  exceptions.h  forward_defines.h  imodule.h  lua_file_mapper.cpp  lua_file_mapper.fbs  lua_file_mapper.h  manifest.cpp  manifest.h  model.cpp  model.h  namespace.h  number_resource.cpp  number_resource.h  object_resource.cpp  object_resource.h  recipe.cpp  recipe.h  region2d.cpp  region2d.h  res_manager.cpp  res_manager.h  resource.h  resource_compiler.cpp  resource_compiler.h  rig.cpp  rig.h  skeleton.cpp  skeleton.h  string_resource.cpp  (+4 more)
source/simulation/: CMakeLists.txt  client.h  interfaces.cpp  interfaces.h  item_manager.h  namespace.h  pch.h  remote_client.cpp  remote_client.h  save_versions.h  simulation.cpp  simulation.h  simulation.hpp  trace_categoies.h
source/stonehearth/: .gitignore  (+4 more)
(+7572 files in other folders)
